prepare for snapshot release