@@ -64,6 +64,20 @@
 		</repository>
 	</distributionManagement>
 
+	<modules>
+		<module>../jdmp-core</module>
+		<module>../jdmp-gui</module>
+		<module>../jdmp-bsh</module>
+		<module>../jdmp-jetty</module>
+		<module>../jdmp-jgroups</module>
+		<module>../jdmp-liblinear</module>
+		<module>../jdmp-libsvm</module>
+		<module>../jdmp-lucene</module>
+		<module>../jdmp-mallet</module>
+		<module>../jdmp-stanfordpos</module>
+		<module>../jdmp-weka</module>
+		<module>../jdmp-complete</module>
+	</modules>
 
 	<build>
 		<resources>
@@ -116,6 +130,16 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9.1</version>
+				<configuration>
+					<failOnError>false</failOnError>
+					<noindex>true</noindex>
+					<notree>true</notree>
+					<additionalJOptions>
+						<additionalJOption>-J-Xss512M</additionalJOption>
+						<additionalJOption>-J-XX:MaxPermSize=512M</additionalJOption>
+					</additionalJOptions>
+					<maxmemory>1G</maxmemory>
+				</configuration>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
@@ -275,13 +299,8 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
-	<repositories>
-		<repository>
-			<id>java-matrix</id>
-			<name>java-matrix maven repository</name>
-			<url>http://java-matrix.org/maven2/</url>
-		</repository>
-	</repositories>
+	<!-- <repositories> <repository> <id>java-matrix</id> <name>java-matrix 
+		maven repository</name> <url>http://java-matrix.org/maven2/</url> </repository> 
+		</repositories> -->
 
 </project>
